crates/ui/tests/snapshots/panel_snapshots__charts_screen__chip_row_active_eth.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 598
expression: charts_screen_summary(&c)
---
screen: charts
layout: chip_row + chart_canvas
chips:
  rule=— venue=binance symbol=BTCUSDT
  rule=ACCENT venue=binance symbol=ETHUSDT
  rule=— venue=binance symbol=SOLUSDT
chart_markers: ready(4 markers)
chart_bars: 0
